fix: native cpp, CI workflows, gitattributes, web, openapi sync
- cpp: CodecOpus, easyopus, SamplesConverter, opus headers, CMakeLists
- CI: build-apk.yml, check-openapi.yml, .gitattributes, .gitignore
- web: openapi sync, api-client regen, svg media, llms.txt, apis.yml
- semantic: action_category_pools, grammar, semantic_zh
- ApiValidator/LedCenter/VoskController/XiaozhiBridge fixes
- gradlew.bat, scripts/requirements.txt, sdk-module README